# rust-3d-orientation-demo

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb
.cargo/: config
crates/kalman_nostd/: Cargo.toml
crates/kalman_nostd/src/: lib.rs  linalg.rs  math.rs  one.rs
crates/kalman_nostd/src/linalg/: one.rs
crates/lis2mdl/: Cargo.toml
crates/lis2mdl/src/: error.rs  lib.rs  register.rs
crates/lsm6dso/: Cargo.toml
crates/lsm6dso/src/: lib.rs  register.rs
crates/stts751/: Cargo.toml
crates/stts751/src/: error.rs  lib.rs  register.rs
example/: plot_sensors.py
src/: a_module.rs  a_module_interface.rs  button_led_handler.rs  button_led_handler_implementation.rs  main.rs
