[package]
name = "orientation_bare_metal"
version = "0.1.0"
authors = ["Stefan Lüthi <stefan.luethi@outlook.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
embedded-hal = "0.2"
panic-halt = "0.2.0"
panic-itm = "0.4.1"
shared-bus = "0.2.0"
micromath = "1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f446"]

[dependencies.lsm6dso]
path = "./crates/lsm6dso"

[dependencies.lis2mdl]
path = "./crates/lis2mdl"

[dependencies.stts751]
path = "./crates/stts751"

[dependencies.kalman_nostd]
path = "./crates/kalman_nostd"

# this lets you use `cargo fix`!
[[bin]]
name = "orientation_bare_metal"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations