[package]
name = "lsm6dso"
version = "0.1.0"
authors = [" <stefan.luethi@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
accelerometer = "0.11.0"
num_enum = { version = "~0.5", default-features = false }

[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"

[target.thumbv7m-none-eabi.dev-dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
version = "0.5.3"

[target.thumbv6m-none-eabi.dev-dependencies.stm32g0xx-hal]
features = ["stm32g07x", "rt"]
version = "0.0.7"

#[[example]]
#name = "stm32g070"
#required-features = ["stm32g070"]

#[features]
#stm32g070 = []
#stm32f103 = []